methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:16: error: value or is not a member of Boolean
while (haveBaggle() == false or compteur<7) {
                             ^