methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit : Boolean = false
  if (estSurBiscuit)
  	vuBiscuit = true
  for (nbPas <- 1 to 6) {
    avance()
    if (estSurBiscuit)
    	vuBiscuit = true
  }
  recule(6)
  return(vuBiscuit)
}

var compteur : Int = 0
haveBaggle()
while (haveBaggle() == false or compteur<7) {
  droite()
  avance()
  gauche()
  compteur = compteur + 1
}